static/app.css
html, body {
    margin: 0;
}
.container {
    display:flex;
    background-color: black;
    width: 100%;
    height: 100vh;
}

.color {
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: flex-end;
    cursor: pointer;
    transition: 0.2s opacity;
}

.color:active {
    opacity: 0.8;
}

.color span {
    font-size: 5vmin;
    margin-bottom: 2rem;
    color: white;
    text-shadow: 1px 1px black;


}

#form {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%)
}

#form input[type="text"] {
    font-size: 0.8rem;
    outline: 0;
    border: 2px solid white;
    background-color: #f2f2f2;
    padding: 20px;
    width: 275px;
}

.btn {
    background-color: #4caf50;
    padding: 20px;
    font-size: 0.8rem;
    color: white;
    border: 2px solid white;
    transition: 0.2s opacity;
    display:none;
}

.btn:hover {
    opacity: 0.6;
}

